<resources>
    <string name="gen_next">Next</string>
    <string name="gen_finished">Finished</string>
    <string name="gen_cancel">Cancel</string>
    <string name="gen_ok">Ok</string>
    <string name="gen_edit">Edit</string>
    <string name="gen_notice">Notice</string>
    <string name="gen_update">Update</string>
    <string name="login_title">Enter Passcode:</string>
    <string name="first_title">Lloyds Student Setup</string>
    <string name="first_intro">Welcome to Lloyds Student your all-in-one finance solution during Uni
                               ! \n\nIn order to set up your Lloyds Student App we need to take a few
                               details to link your bank account with the app and get you started</string>
    <string name="first_username_label">1. Online Banking User ID</string>
    <string name="first_password_label">2. Online Banking Password</string>
    <string name="first_passcode_info">Next we need you to set-up a four digit passcode which you\'ll
                                       use each time you log into the app to keep your details
                                       secure try to make your passcode memorable but also
                                       unique and secure</string>
    <string name="first_passcode_label">Passcode:</string>
    <string name="first_passcode_confirm">Confirm:</string>
    <string name="first_failed_login">Sorry but your online login details didn\'t match our records (Make sure you\'re using your Online Banking Login)</string>
    <string name="first_failed_passcode">Sorry but your inputs didn\'t match. Please try again making sure you enter both passcodes the same</string>
    <string name="budget_my_budget">My Weekly Budget Is\u00A0</string>
    <string name="budget_you_spent">You\'ve spent</string>
    <string name="budget_thank">less than last week</string>
    <string name="budget_remaining_start">You\'ve got\u00A0\u00A0</string>
    <string name="budget_remaining_end">\u00A0 left this week</string>
    <string name="budget_cash_button">Add Cash Entry</string>
    <string name="budget_settings_button">Budget Settings</string>
    <string name="budget_pie_title">Where You\'re Spending</string>
    <string name="budget_line_title">Weekly Spend</string>
    <string name="budget_overview">Weekly Overview</string>
    <string name="login_intro">Welcome to Lloyds Student. \n\nPlease enter your 4 digit pass code to Login and View your account</string>
    <string name="cash_title">Cash Purchase</string>
    <string name="cash_description">Use this dialouge to log any cash purchases you\'ve made so your budgeting advice can be as accurate as possible ! If you don\'t log your cash purchases then the ATM transactions will just show up in the Misc category of your budgeting</string>
    <string name="cash_name">Purchase Name</string>
    <string name="cash_category">Category</string>
    <string name="cash_amount">Amount</string>
    <string name="cash_balance">Balance</string>
    <string name="cash_cancel">Cancel</string>
    <string name="cash_add">Add</string>
    <string name="cash_category_prompt">Choose a country</string>
    <string-array name="cash_categories">
        <item>Food</item>
        <item>Travel</item>
        <item>Beauty &amp; Hygiene</item>
        <item>Entertainment</item>
        <item>Home</item>
        <item>Clothes</item>
        <item>Leisure</item>
        <item>Other</item>
    </string-array>
    <string name="main_tab_customer">Mike Williams</string>
    <string name="main_tab_login">LAST LOGIN 11:56 NEWCASTLE</string>
    <string name="main_tab_transfer">Make a Transfer</string>
    <string name="main_tab_contact">Pay a Contact</string>
    <string name="main_account_title">Account Overview</string>
    <string name="main_account_balance">Balance</string>
    <string name="main_account_interest">Interest Rate</string>
    <string name="main_account_overdraft">Overdraft Limit</string>
    <string name="main_account_this">This Month</string>
    <string name="main_account_last">Last Month</string>
    <string name="transaction_confirm_title">Confirm Your Transaction</string>
    <string name="transaction_description">Select which of your accounts you want to transfer the money between then add a payment reference and the amount you want to transfer (You\'ll have the option to review the payment before it\'s confirmed)</string>
    <string name="transaction_details_correct">Are all the details correct ?</string>
    <string name="transaction_title">Transfer money between your Lloyd\'s accounts</string>
    <string name="transaction_transfer_from">From:</string>
    <string name="transaction_transfer_to">To:</string>
    <string name="transaction_reference">Payment Reference</string>
    <string name="transaction_amount">Amount</string>
    <string name="transaction_review">Review Payment</string>
    <string name="pay_title">Pay A Contact</string>
    <string name="pay_note">(Limit: Minimum £1, Maximum daily: £300)</string>
    <string name="pay_phone">Phone Number</string>
    <string name="pay_sortcode">Sort Code</string>
    <string name="settings_change_title">Change Passcode</string>
    <string name="settings_change_description">If you want to change your passcode enter your desired passcode below, you will be asked to confirm your current password before you can save your changes</string>
    <string name="settings_change_passcode">New Passcode</string>
    <string name="settings_change_confirm">Confirm Passcode</string>
    <string name="settings_verify_passcode">Enter Your Old Passcode</string>
    <string name="settings_about_title">About the Lloyds Banking App</string>
    <string name="settings_about_status">Service Status</string>
    <string name="settings_about_message">Be wary of suspicious calls, we\'ll never ask you to transfer money out of your account to another account for security purposes. </string>
    <string name="settings_about_check_1">There are simple solutions you can put in place to keep you and your information safe online. Find out how you can:</string>
    <string name="settings_about_check_2">Use anti-virus software</string>
    <string name="settings_about_check_3">Prevent spam </string>
    <string name="settings_about_check_4">Secure your wireless connection</string>
    <string name="settings_about_check_5">Keep your operating system up to date</string>
    <string name="settings_about_legal_label">Important Legal Information</string>
    <string name="settings_about_legal">Lloyds Bank plc is authorised by the Prudential Regulation Authority and regulated by the Financial Conduct Authority and the Prudential Regulation Authority under registration number 119278. Authorisation can be checked on the Financial Services Register at www.fca.org.uk. Lloyds Bank plc is a member of the Financial Services Compensation Scheme and the Financial Ombudsman Service. We subscribe to the Lending Code; copies of the Code can be obtained from www.lendingstandardsboard.org.uk.\n
\nLloyds Bank plc Registered Office: 25 Gresham Street, London EC2V 7HN. Registered in England and Wales No. 2065.</string>
    <string name="settings_manager_details">Personal Details</string>
    <string name="settings_manager_report">Report An Issue</string>
    <string name="settings_manager_personal">Update your details</string>
    <string name="settings_manager_passcode">Change Passcode</string>
    <string name="settings_manager_money">Money Management</string>
    <string name="settings_manager_statements">Manage Statements</string>
    <string name="settings_manager_lost">Lost/Stolen</string>
    <string name="settings_manager_issue">Having an Issue</string>
    <string name="settings_update_title">Update Your Details</string>
    <string name="settings_update_email">Email</string>
    <string name="settings_update_number">Contact Number</string>
    <string name="settings_update_preferred">Preferred Contact</string>
    <string name="settings_update_phone">Phone</string>
    <string name="settings_update_text">SMS</string>
    <string name="settings_update_post">Post</string>
    <string name="settings_money_title">Money Management</string>
    <string name="settings_money_mess_1">Money Management can have different meaning to different people, for a student it is about helping them with their day to day budget and encouraging them to maintain a healthy bank account. Hear at
        Lloyds we help our customers to achieve these goals with ease and help you overcome your daily banking challenges with our free Internet Banking Service.  </string>
    <string name="settings_money_mess_2">The Spending Analysis shows all your monthly income and expenditure in more detail. You can plan for the future using Budget Settings from the Help Menu and maybe save for something special with Savings Goals, both designed to help you keep a closer eye on your finances.
    With the Deals facilities you will be able to find deals that meets you budget that has been set by yourself.</string>
    <string name="settings_money_link">Find more about Money Management with Lloyds</string>
    <string name="settings_faq_title">Frequently Asked Questions</string>
    <string name="settings_faq_message" >Welcome to our help centre. Here you can find answers to out Frequently Asked Questions. If for any reason you couldn\'t find what you are looking for, then
    please do try and get in touch with us either via phone or email. </string>
    <string name="settings_faq_q1">How can I contact my local branch?</string>
    <string name="settings_faq_a1"> To contact us by phone, please call us on 0845 3 000 000 (calls may be recorded). Our UK-based advisers are able to answer a wide range of banking queries and are available 24 hours a day, 7 days a week. They are able to put you in touch with your local branch if required.</string>
    <string name="settings_faq_q2">I don\'t recognise a transaction on my account - what do I do?</string>
    <string name="settings_faq_a2">You can use our Fraud Detection feature we have introduced new to our app. Next to every transaction there is a question mark symbol next to it, if you believe that
    that transaction is not been made by you then click on the symbol and follow the wizard on the screen. </string>
    <string name="settings_faq_q3">Who can I contact if I have a query on my balance and transaction?</string>
    <string name="settings_faq_a3">If you want to talk to us about your balance or transactions, call Phonebank on 0845 3 000 000 or go to any Lloyds Bank branch. </string>
    <string name="settings_faq_q4">How do I transfer money to another person?</string>
    <string name="settings_faq_a4">If you\'re registered for Mobile Banking, you can transfer money between accounts and also make payments to pay a bill or another person through your phone, please do have a look on our
        Lloyds Banking Tour to familiarise your self with how to go about it.</string>
    <string name="settings_faq_q5">Can I change my Passcode?</string>
    <string name="settings_faq_a5">Yes you can, click on the Account Management option inside the Help Menu. This will take you to another window where you will have the option to change your Passcode. </string>
    <string name="app_name">Lloyds Student</string>
    <string name="hello_world">Hello World</string>
    <string name="menu_login">Menu Login</string>
    <string name="menu_main">Menu Main</string>
    <string name="accountType">Student Account</string>
    <string name="currentMoney">£2000.00</string>
    <string name="accountDetails">20-14-19 | 12345678</string>
    <string name="UpdateYourDetailsimportant">Customer\'s are advice to change their personal details using our Lloyd\'s App. Edit you details below and submit your request by clicking on the Update button.
    Please allow 48 hours for changes to take effect. </string>
</resources>