<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:background="@color/white" >

    <TextView
        style="@style/LloydsTitleLarge"
        android:id="@+id/transfer_confirm_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/transaction_confirm_title"/>

    <View
        android:id="@+id/transfer_confirm_underline"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@+id/transfer_confirm_title"
        android:background="@color/dark_green" />

    <ScrollView
        android:id="@+id/transfer_confirm_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/transfer_confirm_underline" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/LloydsTextSmall"
                android:id="@+id/transfer_confirm_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/transaction_details_correct"/>

            <TextView
                style="@style/LloydsTitleMedium"
                android:id="@+id/transfer_confirm_from_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_below="@id/transfer_confirm_question"
                android:text="@string/transaction_transfer_from" />

            <TextView
                style="@style/LloydsTextSmall"
                android:id="@+id/transfer_confirm_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_below="@id/transfer_confirm_from_label"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/transferaccount_icon" />

            <TextView
                style="@style/LloydsTitleMedium"
                android:id="@+id/transfer_confirm_to_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_below="@id/transfer_confirm_from"
                android:text="@string/transaction_transfer_to" />

            <TextView
                style="@style/LloydsTextSmall"
                android:id="@+id/transfer_confirm_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_below="@id/transfer_confirm_to_label"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/transferaccount_icon" />

            <TextView
                style="@style/LloydsTitleMedium"
                android:id="@+id/transfer_confirm_amount_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_below="@id/transfer_confirm_to"
                android:text="@string/transaction_amount" />

            <TextView
                style="@style/LloydsTextSmall"
                android:id="@+id/transfer_confirm_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_below="@id/transfer_confirm_amount_label" />

            <TextView
                style="@style/LloydsTitleMedium"
                android:id="@+id/transfer_confirm_reference_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_below="@id/transfer_confirm_amount"
                android:text="@string/transaction_reference" />

            <TextView
                style="@style/LloydsTextSmall"
                android:id="@+id/transfer_confirm_reference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_below="@id/transfer_confirm_reference_label" />

        </RelativeLayout>

    </ScrollView>

    <TableLayout
        android:id="@+id/transfer_confirm_tabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@id/transfer_confirm_scroll"
        android:stretchColumns="*">

        <TableRow>

            <Button
                style="@style/LloydsButtonActive"
                android:id="@+id/transfer_confirm_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="4dp"
                android:text="@string/gen_edit" />

            <Button
                style="@style/LloydsButtonActive"
                android:id="@+id/transfer_confirm_ok"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:text="@string/gen_ok" />

        </TableRow>

    </TableLayout>

</RelativeLayout>