<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:background="#fffcfdff"
    android:layout_height="wrap_content">

    <TextView
        style="@style/LloydsSubTitle"
        android:id="@+id/main_first_account_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/accountType"
        android:gravity="center" />

    <ImageButton
        android:id="@+id/main_first_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_leftarrow"
        android:background="@color/white" />

    <TextView
        style="@style/LloydsTitleXLarge"
        android:id="@+id/main_first_account_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/main_first_account_name"
        android:text="@string/currentMoney" />

    <ImageButton
        android:id="@+id/main_first_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_rightarrow"
        android:background="@color/white" />

    <TextView
        style="@style/LloydsSubTitle"
        android:id="@+id/main_first_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/main_first_account_balance"
        android:text="@string/accountDetails"
        android:gravity="center" />

</RelativeLayout>
